project-02_db/terraform/security.tf
## Security group for EC2
resource "aws_security_group" "Project2-ec2" {
    vpc_id = aws_vpc.project-db.id
    ingress {
        from_port = 22
        to_port = 22
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }

    egress {
        from_port = 0
        to_port = 0
        protocol = "-1"
        cidr_blocks = ["0.0.0.0/0"]
    }
  
}
